src/main/kotlin/com/example/hierarchical_infolearn/global/error/data/ErrorResponse.kt
package com.example.hierarchical_infolearn.global.error.data

data class ErrorResponse(
    val message: String,
    val data: String
)
